<resources>
    <string name="app_name">CMPT 276 Project Aluminium</string>
    <string name="critical_issues">Critical:</string>
    <string name="non_critical_issues">Non-Critical:</string>
    <string name="inspection_date">Inspection Date:</string>
    <string name="restaurant_details">Restaurant Details:</string>
    <string name="name">Name:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="inspections">Inspections:</string>
    <string name="issues">Issues:</string>
    <string name="Last_inspection">Last Inspection:</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="of_issues"># of Issues</string>
    <string name="date">Date</string>
    <string name="restaurants">Restaurants</string>
    <string name="hazard_rating">Hazard Rating</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="not_available">N/A</string>
    <string name="address">Address</string>
    <string name="critical">Critical Issues:</string>
    <string name="non_critical">Non-Critical Issues:</string>
    <string name="inspectiontype">Inspection Type:</string>
    <string name="id">ID:</string>
    <string name="textview">textview</string>
    <string name="violation101">Plans/construction not regulation</string>
    <string name="violation102">Unapproved operation of premises</string>
    <string name="violation103">Does not possess valid permit</string>
    <string name="violation104">Permit not placed conspicuously</string>
    <string name="violation201">Food contaminated or unsafe to eat</string>
    <string name="violation202">Food not processed safely</string>
    <string name="violation203">Food not cooled safely</string>
    <string name="violation204">Food not heated safely</string>
    <string name="violation205">Food improperly stored above 4°C</string>
    <string name="violation206">Food improperly stored below 60°C</string>
    <string name="violation208">Food improperly obtained</string>
    <string name="violation209">Food improperly protected</string>
    <string name="violation210">Food improperly thawed</string>
    <string name="violation211">Food improperly stored above -18°C</string>
    <string name="violation212">Food handling manual not provided</string>
    <string name="violation301">Equipment in unsanitary condition</string>
    <string name="violation302">Equipment not properly washed</string>
    <string name="violation303">Equipment not adequate</string>
    <string name="violation304">Premises not pest-free</string>
    <string name="violation305">Insufficient pest prevention</string>
    <string name="violation306">Premises in unsanitary condition</string>
    <string name="violation307">Equipment not of proper material</string>
    <string name="violation308">Equipment not in working order</string>
    <string name="violation309">Chemicals improperly stored</string>
    <string name="violation310">Disposable utensils are reused</string>
    <string name="violation311">Premises not maintained</string>
    <string name="violation312">Unrelated items kept on premises</string>
    <string name="violation313">Live animals on premises</string>
    <string name="violation314">Sanitation manual not provided</string>
    <string name="violation315">Thermometers are missing</string>
    <string name="violation401">Handwashing stations inadequate</string>
    <string name="violation402">Employee didn\'t wash hands</string>
    <string name="violation403">Employee lacks hygiene</string>
    <string name="violation404">Employee smoking on premises</string>
    <string name="violation501">Operator missing FOODSAFE</string>
    <string name="violation502">Staff missing FOODSAFE</string>
    <string name="invalid_id">invalid ID</string>
    <string name="violations">Violations:</string>
    <string name="hazard_level">Hazard Level:</string>
    <string name="short_description">Short Description</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
